--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "bootstrap": "^4.5.3",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
-    "vue": "^2.6.14"
+    "vue": "^2.6.14",
+    "vue-toastification": "^1.7.14"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
